removed Mac specific code which is not working any more on recent Macs